--- a/contact.html
+++ b/contact.html
@@ -93,10 +93,10 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="assets/images/School-of-athens.jpg" alt="Charles River">
+          <img src="assets/images/school-of-athens.jpg" alt="School of Athens">
         </div>
         <div class="item">
-          <img src="assets/images/classroom.jpg" alt="School of Athens">
+          <img src="assets/images/classroom.jpg" alt="classroom">
         </div>
       </div>
 
@@ -117,7 +117,6 @@
         <li><a href="index.html">Home</a></li>
       </ul>
     </nav>
-  
   </header>
 
   <!-- <div class="container"> -->
