--- a/contact.html
+++ b/contact.html
@@ -126,14 +126,14 @@
       <p class="center">-Nasswan Dossabhoy</p>
     </div>
     <div class="col-70 last">
-      <form action="formmail.php" method="post" id="ajax-contact">
+      <form action="//formspree.io/aaronp020@gmail.com" method="post">
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+          <input type="email" class="form-control" id="email" name="_replyto" placeholder="Enter email">
         </div>
 
         <div class="form-group">
@@ -141,7 +141,6 @@
           <textarea class="form-control" rows="3" id="message" name="message" placeholder="Please leave your message here"></textarea>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-        <div id="form-messages"></div>
       </form> 
     </div>  
   <!-- </div> -->
