--- a/thankyou.html
+++ b/thankyou.html
@@ -119,31 +119,7 @@
     </nav>
   </header>
 
-  <!-- <div class="container"> -->
-    <div class="col-30">
-      <div class="headshot circle"></div>
-      <p class="center">For questions, comments or concerns, please use the contact form. Thank you. </p>
-      <p class="center">-Nasswan Dossabhoy</p>
-    </div>
-    <div class="col-70 last">
-      <form action="//formspree.io/aaronp020@gmail.com" method="post">
-        <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
-        </div>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" name="_replyto" placeholder="Enter email">
-          <input type="hidden" name="_next" value="/thanks.html" />
-        </div>
-
-        <div class="form-group">
-          <label for="message">Message:</label>
-          <textarea class="form-control" rows="3" id="message" name="message" placeholder="Please leave your message here"></textarea>
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form> 
-    </div>  
+  <h1>Thank you for your message, I will be in touch soon.</h1>
   <!-- </div> -->
 
   <footer class="container">
