--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
       <p class="center">-Nasswan Dossabhoy</p>
     </div>
     <div class="col-70 last">
-      <form action="//formspree.io/aaronp020@gmail.com" method="post">
+      <form action="//formspree.io/ndossabh@gmail.com" method="post">
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
